[package]
name = "filesender"
version = "0.1.0"
edition = "2021"
authors = ["dojje (https://dojje.se)"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = {version = "1", features = ["derive"]}
bincode = "1.3.3"
chrono = "0.4.19"
env_logger = "0.9.0"
colored = "2.0.0"
tokio = {version = "1", features = ["full"]}
message-derive = {path = "message-derive"}
clap = { version = "3.1.0", features = ["derive"] }
rand = "0.8.5"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[lib]
name = "shared"
path = "src/shared/lib.rs"
