[package]
name = "mork"
version = "0.1.4"
edition = "2021"
authors = ["dojje (dojje.se)"]
license = "MIT OR Apache-2.0"
description = "application for sending files over udp written in rust"
repository = "https://github.com/dojje/mork"
readme = "README.md"
keywords = ["filesharing", "udp"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
serde = {version = "1", features = ["derive"]}
toml = "0.5.8"
bincode = "1.3.3"
chrono = "0.4.19"
env_logger = "0.9.0"
colored = "2.0.0"
tokio = {version = "1", features = ["full"]}
mork-message-derive = {version = "0.1.0"}
clap = { version = "3.1.0", features = ["derive"] }
rand = "0.8.5"
dovepipe = {version = "0.1.6", features = ["logging"], git = "https://github.com/dojje/dovepipe"}
ip_rfc = "0.1.0"
whoami = "1.2.1"

[features]
# sim_wan = []

[[bin]]
name = "mork"
path = "src/client/main.rs"

[[bin]]
name = "mork-server"
path = "src/server/main.rs"

[lib]
name = "shared"
path = "src/shared/lib.rs"
