[package]
name = "mork-message-derive"
version = "0.1.0"
edition = "2021"
description = "procedural macros for mork"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dojje/mork"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
serde = {version = "1", features = ["derive"]}
bincode = "1.3.3"
darling = "0.13"

[lib]
proc-macro = true
